package perobobbot.twitch.api;

import io.micronaut.serde.annotation.Serdeable;
import io.micronaut.serde.config.naming.SnakeCaseStrategy;
import lombok.Value;
import perobobbot.api.Identity;
import perobobbot.api.UserInfo;

/**
 * {
 *   "data": [
 *     {
 *       "id": "141981764",
 *       "login": "twitchdev",
 *       "display_name": "TwitchDev",
 *       "type": "",
 *       "broadcaster_type": "partner",
 *       "description": "Supporting third-party developers building Twitch integrations from chatbots to game integrations.",
 *       "profile_image_url": "https://static-cdn.jtvnw.net/jtv_user_pictures/8a6381c7-d0c0-4576-b179-38bd5ce1d6af-profile_image-300x300.png",
 *       "offline_image_url": "https://static-cdn.jtvnw.net/jtv_user_pictures/3f13ab61-ec78-4fe6-8481-8682cb3b0ac2-channel_offline_image-1920x1080.png",
 *       "view_count": 5980557,
 *       "email": "not-real@email.com",
 *       "created_at": "2016-12-14T20:32:28Z"
 *     }
 *   ]
 * }
 */
@Value
@Serdeable(naming = SnakeCaseStrategy.class)
public class User {
    String id;
    String login;
    String displayName;

    public UserInfo toUserInfo() {
        return new UserInfo(new Identity(Twitch.PLATFORM,id),login,displayName);
    }
}
