@startuml

class Application {
  name : String
  clientId : String
  clientSecret : String
  platform : Platform
}

class ApplicationToken {
  accessToken : String
  expirationInstant : Instant
  application : Application
}

class User {
    name : String
    identities : List<UserIdentity>
}

class UserIdentity {
  userId : String
  login : String
  name : Instant
  platform : Platform
}

class UserToken {
  userIdentity : UserIdentity
  accessToken : String
  refreshToken : String
  tokenType : String
  platform : Platform
  scopes : List<Scope>
  expirationInstant : Instant
}

class Channel {
  platform: Platform
  channelName : String
}

class JoinedChannel {
  user: User
  channel : Channel
}

Application "1"--"1" ApplicationToken

User --* UserIdentity
User --* JoinedChannel

Channel --* JoinedChannel

UserIdentity "1"--"1" UserToken



@enduml